<resources>
    <string name="app_name">Whoot!</string>
    <string name="title_activity_login">登入</string>
    <string name="prompt_email">電郵地址</string>
    <string name="prompt_password">密碼（選填）</string>
    <string name="action_sign_in">登入或註冊</string>
    <string name="action_sign_in_short">登入</string>
    <string name="error_invalid_email">此電郵地址無效</string>
    <string name="error_invalid_password">密碼太短</string>
    <string name="error_incorrect_password">密碼錯誤</string>
    <string name="error_field_required">必須填寫此欄</string>
    <string name="permission_rationale">"需要通訊錄的權限以完成操作"
    </string>
    <string name="permission_rationale_location">必須開啟定位服務以使用 \'my location\' 功能，地圖上會顯示你現在身處的位置。</string>
    <string name="location_permission_denied">>要使用此項目，必須開啟 \'my location\' 功能。請重試並允許應用程式取得您的location.\nIf 若權限已被拒絕，請前往「設定」重新開啟 &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">要使用此項目，必須開啟定位服務</string>
    <string name="facebook_app_id">289527954888996</string>
    <string name="fb_login_protocol_scheme">289527954888996</string>
    <string name="chinese">簡体中文</string>
    <string name="chinese_fan">繁體中文</string>
    <string name="english">English</string>
    <string name="reward_no">暫無可兌換項目</string>
    <string name="reviews_no">沒有食評</string>
    <string name="find">探索</string>
    <string name="copp">Token</string>
    <string name="myme">我的</string>
    <string name="login">登入查看</string>
    <string name="ping">評論成功</string>
    <string name="lun">評論失敗</string>
    <string name="boda">是否撥打電話</string>
    <string name="stare">立即體驗</string>
    <string name="exchange">兌換記錄</string>
    <string name="coupon">過期Whoot! Token</string>
    <string name="comment">我的食評</string>
    <string name="setting">設定</string>
    <string name="rewards">Whoot! Token:</string>
    <string name="search">搜尋</string>
    <string name="filter">篩選</string>
    <string name="cancel">取消</string>
    <string name="language">語言</string>
    <string name="help">幫助</string>
    <string name="about">關於Whoot！</string>
    <string name="clear">清除緩存</string>
    <string name="out">登出</string>
    <string name="reset">重設</string>
    <string name="conditions">篩選條件</string>
    <string name="determine">確定</string>
    <string name="distance">距離</string>
    <string name="consumption">最低消費</string>
    <string name="stars">星级</string>
    <string name="restaurant">菜式</string>
    <string name="one_star">1星</string>
    <string name="twe_star">2星</string>
    <string name="three_star">3星</string>
    <string name="fore_star">4星</string>
    <string name="five_star">5星</string>
    <string name="about_one">Whoot！是一個完全免費的餐飲應用程式, 您無需預先支付任何費用, 即可獲得免費美食。</string>
    <string name="about_twe">Whoot！簡介</string>
    <string name="about_three">Whoot! 的Whoot! Token和印花分為鑽石、金、銀、銅級四個等級。用戶首次登入 Whoot!，即可獲得Whoot! Token，該Whoot! Token可於 Whoot! 的合作餐廳兌換免費美食。每次兌換Whoot! Token後，您亦會再次獲得Whoot! Token和印花。</string>
    <string name="about_fore">如何使用</string>
    <string name="about_five">打開 Whoot！應用程式, 搜尋附近餐廳, 查看餐廳簡介、用戶評語及可兌換的美食。當消費達到最低消費標準後，即可向餐廳員工出示您的Whoot! Token QR Code 以兌換免費美食。</string>
    <string name="facebook_l">Facebook 登入</string>
    <string name="google_l">Google 登入</string>
    <string name="popular">熱門搜尋</string>
    <string name="batch">更新</string>
    <string name="historical">搜尋記錄</string>
    <string name="clear_all">清除全部</string>
    <string name="not_result">whoot！未搜尋到相關結果</string>
    <string name="Instructions">說明：</string>
    <string name="card_one">2. 集齊五個印花後，系統將會自動為您換領相應等級的Whoot! Token</string>
    <string name="card_twe">3. Whoot! Token使用間隔為每 2 小時一次</string>
    <string name="card_three">1. 鑽石幣僅限於在最常光顧的</string>
    <string name="card_store">五間餐廳</string>
    <string name="card_use">使用</string>
    <string name="card_use_to">使用</string>
    <string name="card_time">下次可使用時間</string>
    <string name="custom_data">沒有資料</string>
    <string name="custom_often">最常光顧的餐廳</string>
    <string name="pro_photo">照片</string>
    <string name="pro_name">帳號名稱</string>
    <string name="pro_email">電郵</string>
    <string name="pro_gender">性别</string>
    <string name="pro_gender_male">男</string>
    <string name="pro_gender_fema">女</string>
    <string name="pro_region">地區</string>
    <string name="pro_oca">職業</string>
    <string name="profile">個人資料</string>
    <string name="pro_save">儲存</string>
    <string name="pro_saved">已儲存</string>
    <string name="pro_saving">儲存中</string>
    <string name="pro_pho_p">拍照</string>
    <string name="pro_car">從相片中選取</string>
    <string name="pro_no">取消</string>
    <string name="pro_quan">無法啟用相機，請先開啟相機權限</string>
    <string name="home_item_fen">個評分)</string>
    <string name="home_item_mon">$100</string>
    <string name="exchange_one">可兌換</string>
    <string name="top">熱門推薦</string>
    <string name="ratings">食評</string>
    <string name="detail">詳情：</string>
    <string name="detail_dui">可兌換數量：</string>
    <string name="md_title">通知</string>
    <string name="md_message">若要使用此功能，請先開啟網路服務。</string>
    <string name="md_out">登出</string>
    <string name="md_sz">設定</string>
    <string name="cancel_no">取消</string>
    <string name="evaluation">食評</string>
    <string name="write_comment">撰寫食評</string>
    <string name="see">查看食評</string>
    <string name="ratin">評分</string>
    <string name="write_e">你可在此留下您此次用餐的感想與評價</string>
    <string name="photo">圖片</string>
    <string name="photo_on">圖片（選填）不超過 6 張</string>
    <string name="sou_suo">暫未找到相關餐廳</string>
    <string name="help_title">如何獲得免費Whoot! Token？</string>
    <string name="help_title1">如何兌換美食？</string>
    <string name="help_txt_one">獲得免費Whoot! Token的方式如下：</string>
    <string name="help_txt_twe">1.首次登入Whoot！應用程式，即可獲得一張銅級Whoot! Token</string>
    <string name="help_txt_three">2.每次兌換Whoot! Token後，即再次獲得Whoot! Token及印花作獎賞</string>
    <string name="help_txt_1">您可以在任何一家Whoot！的合作餐廳兌换美食，你只須在下單時向餐廳員工出示Whoot! Token QR Code 或兌換商品的 QR Code 即可。</string>
    <string name="help_txt_2">Whoot! Token QR Code：進入Whoot! Token，點擊Whoot! Token即可使用</string>
    <string name="help_txt_3">商品 QR Code：進入店舖詳情頁面, 選擇您要兌換的商品即可使用</string>
    <string name="copper">銅幣</string>
    <string name="silver">銀幣</string>
    <string name="gold">金幣 </string>
    <string name="diamond">鑽石幣</string>
    <string name="expired">過期</string>
    <string name="expired_yi">已過期</string>
    <string name="expired_time">過期時間：</string>
    <string name="expired_ri">到期日</string>
    <string name="login_in">確定要登出嗎？</string>
    <string name="login_out">登出</string>
    <string name="login_o">關閉</string>
    <string name="sub">送出</string>
    <string name="succes">成功!</string>
    <string name="men">餐廳名稱</string>
    <string name="men_dui">兌換商品</string>
    <string name="men_time">兌換商品</string>
    <string name="fail">噢！出錯了！</string>
    <string name="fail_no">網絡連接失敗，請重試</string>
    <string name="fail_you">原因：</string>
    <string name="fail_me">兌換結果</string>
    <string name="xu">出示 QR Code 以獲得免費美食</string>
    <string name="go_there">到這裏</string>
    <string name="no_cored">沒有可用Whoot! Token</string>
    <string name="expired_To">沒有過期Whoot! Token</string>
    <string name="history">沒有兌換記錄</string>
    <string name="review">發表評語</string>
    <string name="zan">沒有已發表的評語</string>
    <string name="open">營業中</string>
    <string name="soon">即將關門</string>
    <string name="Copper">銅</string>
    <string name="Silver">銀</string>
    <string name="Gold">金</string>
    <string name="Diamond">鑽石</string>
    <string name="zuanshi">1. 鑽石幣僅限在最常光顧的五間餐廳使用</string>
    <string name="m">米</string>
    <string name="m_away">米</string>
    <string name="baidu">使用百度地圖</string>
    <string name="google">使用 Google 地圖</string>
    <string name="gaode">使用高德地圖</string>
    <string name="call">是否撥打電話：</string>
    <string name="xiala">下拉更新</string>
    <string name="zhengzai">更新中</string>
    <string name="sifang">鬆開立即更新</string>
    <string name="shangla">上拉載入更多</string>
    <string name="jiazai">正在載入</string>
    <string name="shang">上拉載入</string>
    <string name="songkai">鬆開載入資料</string>
    <string name="shua">更新失敗</string>
    <string name="shuaxin">更新成功</string>
    <string name="wancheng">載入完成</string>
    <string name="jia">載入失敗</string>
    <string name="meiyou">沒有更多資料</string>
    <string name="zanwu">沒有資料</string>
    <string name="tiao">略過</string>
    <string name="zhong">中菜</string>
    <string name="yin">印度菜</string>
    <string name="riben">日本菜</string>
    <string name="kaifei">咖啡廳</string>
    <string name="jiuba">酒吧</string>
    <string name="bingji">雪糕店</string>
    <string name="souxun">搜尋结果</string>
    <string name="you_suc">您已獲得更多的獎賞</string>
    <string name="login_lo">我們不會將您的個人資料透露給第三者</string>
    <string name="box_txt">您已獲得更多的獎賞</string>
    <string name="home_box">向 Whoot！的合作餐廳出示 QR Code，即可獲得免費美食</string>
    <string name="me_comm">食評詳情</string>
    <string name="shi">可使用</string>
    <string name="coup_one">沒有該Whoot! Token資料</string>
    <string name="coup_twe">Whoot! Token已過期</string>
    <string name="coup_three">Whoot! Token已使用</string>
    <string name="coup_fore">3. Whoot! Token使用間隔為每 2 小時一次</string>
    <string name="coup_five">鑽石幣僅能在最常去的五間餐廳使用</string>
    <string name="coup_six">查看最常光顧的餐廳</string>
    <string name="pro_one">名稱含有不雅用語</string>
    <string name="pro_twe">名稱不能為空白</string>
    <string name="pro_three">電郵不能為空白</string>
    <string name="pro_foru">請選擇性別</string>
    <string name="km">千米</string>
    <string name="km_away">千米</string>
    <string name="bu_ya">評語中含有不雅用語，請修改</string>
    <string name="content_c">變更未儲存，是否儲存？</string>
    <string name="write_one">送出中……</string>
    <string name="write_twe">已送出</string>
    <string name="fan">伺服器繁忙</string>
    <string name="lo">登入失敗</string>
    <string name="jiangli">您獲得了獎賞</string>
    <string name="tiyan">立即體驗</string>
    <string name="foot">登入即可獲得免費美食</string>
    <string name="ding">定位服務已關閉</string>
    <string name="wei">請前往「設定」開啟定位服務，然後重新啟動應用程式</string>
    <string name="lue">略過</string>
    <string name="whats">WhatsApp</string>
    <string name="dires">Direct</string>
    <string name="face">Facebook</string>
    <string name="mess">Messenger</string>
    <string name="line">Line</string>
    <string name="wech">WeChat</string>
    <string name="gift_store">此禮品僅限下列餐廳使用</string>
    <string name="gift_re">兌換</string>
    <string name="gift_name">餐廳名稱：</string>
    <string name="gift_add">餐廳地址：</string>
    <string name="gift_pro">禮品名稱：</string>
    <string name="gift_date">有效期至：</string>
    <string name="Introduction_one">Whoot! 是一個跨餐廳的獎賞應用程式，在您每次用餐時，我們都會在您最喜愛的餐廳，酒吧和咖啡店提供絕佳獎賞。獎賞包括飲品、前菜、甜品甚至主菜。
        聽起來不錯？無需預付，無隱藏收費，Whoot! 是完全免費的。在你註冊成為 Whoot! 用戶即可獲贈一份獎賞！立即下載 Whoot!並 登入便可馬上獲得獎賞。</string>
    <string name="Introduction_twe">如何使用Whoot! Token?</string>
    <string name="Introduction_three">Whoot! 以遊戲化方式將獎賞分四類，當中包括鑽石、金、銀和銅。每種Whoot! Token都能在Whoot!合作餐廳兌換相對應的免費餐點。您可以從商家詳情頁的可換領商品或者是下方的Whoot! Token進入，出示對應的QR CODE給Whoot!合作餐廳掃瞄，便可獲得獎賞。</string>
    <string name="Introduction_four">如何取得Whoot! Token？</string>
    <string name="Introduction_five">在您每次成功換領後，Whoot! 會分發若干印花給您。在您獲得5個印花後，系統將會自動幫您升級為Whoot! Token。您只要拜訪Whoot! 合作餐廳，並出示Whoot! Token上的QR CODE即可換領。聽起來很吸引人？現在就馬上光顧Whoot! 合作餐廳並領取您的首份獎賞吧！</string>
    <string name="youtubi">到Whoot! Youtube專頁觀看使用指南: </string>
    <string name="reset_pa">重設密碼</string>
    <string name="enter">請輸入電郵地址</string>
    <string name="send">請輸入註冊時的電郵地址，系統將會發送重設密碼的指示到此電郵。</string>
    <string name="inbox">密碼重設的郵件已發送到你的電郵地址</string>
    <string name="back_log">返回登入</string>
    <string name="review_tip">你有一個已兌換的項目並未評價</string>
    <string name="label_see_more_comment">更多食評（%s篇）</string>
    <string name="invite_code">如何使用推薦碼？</string>
    <string name="invite_install">推薦好友安裝 Whoot! 手機應用程式：</string>
    <string name="invite_via">❶ 以第三方授權登入或在註冊成新用戶時輸入你的推薦碼。成功登入後，你和好友均可獲得 Whoot! Token 獎賞；</string>
    <string name="invite_both">❷ 受邀的好友可於「Token」-「未使用」頁面中輸入推薦碼，兌換成功後，你和好友均可獲得 Whoot! Token 獎賞。</string>
</resources>