<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_review"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="17dp"
        android:gravity="center_vertical">
    <TextView android:id="@+id/tv_store_detail_review"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:textStyle="bold"
        android:text="@string/ratings"
        android:textColor="@color/card_cc"/>
        <TextView
            android:id="@+id/tv_see_more_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_gold"
            android:textSize="13sp"
            android:text="@string/label_see_more_comment"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_review_tip"
        android:layout_marginTop="30dp">
        <TextView android:id="@+id/tv_store_detail_review_tip"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/review_tip"
            android:textColor="@color/main_tab_defaule"/>
        <TextView
            android:id="@+id/tv_write_comment"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:background="@drawable/red_rect_radius_14"
            android:textSize="13sp"
            android:text="@string/write_comment"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginLeft="@dimen/px_10"
            android:textColor="@color/color_fc4c1a"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_store_detail_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:divider="@color/filter_pop"
        android:dividerHeight="0.5dp"
        android:scrollbars="none"
        />
    <TextView
        android:id="@+id/card_no_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/reviews_no"
        android:visibility="gone" />
</LinearLayout>