<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/storedetail_rewarditem_bg">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textStyle="bold"
           android:textSize="16sp"
           android:gravity="center"

           android:layout_marginTop="@dimen/px_50"
           android:textColor="@color/invite_code"
           android:text="@string/invite_code"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/invite_code"
            android:layout_marginTop="@dimen/px_42"
            android:layout_marginLeft="@dimen/px_40"

            android:textSize="13sp"
            android:text="@string/invite_install"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/invite_code"
            android:layout_marginTop="@dimen/px_34"
            android:layout_marginLeft="@dimen/px_40"
            android:layout_marginRight="@dimen/px_40"
            android:textSize="13sp"
            android:text="@string/invite_via"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/invite_code"
            android:layout_marginTop="@dimen/px_34"
            android:layout_marginLeft="@dimen/px_40"
            android:layout_marginRight="@dimen/px_40"
            android:textSize="13sp"
            android:text="@string/invite_both"/>
    </LinearLayout>
    <ImageButton
        android:id="@+id/vox_finsh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/px_30"
        android:background="@drawable/popup_icon_close" />
</LinearLayout>