<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_back" />


    <ImageView
        android:id="@+id/giftitem_img"
        android:layout_width="@dimen/px_300"
        android:layout_height="@dimen/px_200"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/px_100"
         />



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_50"
        android:layout_above="@+id/rl_dots"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp">
        <Button
            android:id="@+id/giftitem_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bootpage_btn"
            android:text="@string/gift_re"
            android:textSize="16sp"
            android:paddingTop="@dimen/px_10"
            android:paddingLeft="@dimen/px_80"
            android:paddingRight="@dimen/px_80"
            android:paddingBottom="@dimen/px_15"
            android:textColor="@color/white"
            />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/gift_item_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/gift_item_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_tab_defaule"
            android:textSize="13sp"

            android:text="@string/shi"/>
        <com.app.whoot.ui.view.custom.TimerTextView
            android:id="@+id/gift_exc_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:01:21"
            android:layout_marginLeft="@dimen/px_10"
            android:textColor="@color/main_gold"
            android:textSize="13sp" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_30"
        android:layout_marginTop="@dimen/px_50"
        android:text="@string/gift_store" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_30"
        android:layout_marginTop="@dimen/px_20"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_black_v1"
            android:textSize="18sp"
            android:text="@string/gift_name"/>
        <TextView
            android:id="@+id/giftitem_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_30"
        android:layout_marginTop="@dimen/px_20"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_black_v1"
            android:textSize="18sp"
            android:text="@string/gift_add"/>
        <TextView
            android:id="@+id/giftitem_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_30"
        android:layout_marginTop="@dimen/px_20"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_black_v1"
            android:textSize="18sp"
            android:text="@string/gift_pro"/>
        <TextView
            android:id="@+id/giftitem_pro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_30"
        android:layout_marginTop="@dimen/px_20"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_black_v1"
            android:textSize="18sp"
            android:text="@string/gift_date"/>
        <TextView
            android:id="@+id/giftitem_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>