<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/title_back"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="@color/card_cc"
        android:textSize="13sp"
        android:layout_marginLeft="@dimen/px_50"
        android:layout_marginTop="@dimen/px_100"
        android:text="@string/reset_pa"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_50"
        android:layout_marginTop="@dimen/px_50"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/forget_conf_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:focusable="true"
            android:padding="@dimen/px_10"
            android:focusableInTouchMode="true"
            android:hint="@string/enter"

            android:layout_weight="1"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/px_50"
        android:layout_marginTop="@dimen/px_10"
        android:layout_marginBottom="@dimen/px_10"
        android:layout_marginRight="@dimen/px_100"
        android:background="@color/item"/>

    <TextView
        android:id="@+id/forget_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_60"
        android:layout_marginLeft="@dimen/px_50"
        android:layout_marginRight="@dimen/px_60"
        android:text="@string/send"/>

    <LinearLayout
        android:id="@+id/forget_deng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/px_40"
        android:layout_marginRight="@dimen/px_40"
        android:layout_marginTop="@dimen/px_80"
        android:background="@drawable/login_btn_one">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/px_30"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>